force-app/main/default/objects/FootfallRecord__c/FootfallRecord__c.object-meta.xml
<CustomObject>
    <description>Weekly footfall count for a Network Rail managed station.</description>
    <label>Footfall Record</label>
    <nameField>
        <displayFormat>FF-{0000}</displayFormat>
        <label>Footfall Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Footfall Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>