force-app/main/default/objects/FootfallRecord__c/fields/FootfallCount__c.field-meta.xml
<CustomField>
    <fullName>FootfallCount__c</fullName>
    <label>Footfall Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <required>true</required>
    <type>Number</type>
</CustomField>