force-app/main/default/objects/FootfallRecord__c/fields/Station__c.field-meta.xml
<CustomField>
    <fullName>Station__c</fullName>
    <label>Station</label>
    <referenceTo>Station__c</referenceTo>
    <relationshipLabel>Footfall Records</relationshipLabel>
    <relationshipName>FootfallRecords</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>