force-app/main/default/objects/FootfallRecord__c/listViews/All_Footfall_Records.listView-meta.xml
<ListView>
    <fullName>All_Footfall_Records</fullName>
    <filterScope>Everything</filterScope>
    <label>All Footfall Records</label>
    <columns>NAME</columns>
    <columns>Station__c</columns>
    <columns>WeekStartDate__c</columns>
    <columns>FootfallCount__c</columns>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>